# recorder-mp3

./: README.md
app/: build.gradle
app/src/androidTest/java/com/foretree/example/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/foretree/example/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/foretree/example/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
mp3lame/: CMakeLists.txt  build.gradle
mp3lame/src/androidTest/java/com/foretree/media/: ExampleInstrumentedTest.java
mp3lame/src/main/: AndroidManifest.xml
mp3lame/src/main/cpp/: MP3Recorder.c  MP3Recorder.h
mp3lame/src/main/java/com/foretree/media/: IRecordStateType.java  MP3Recorder.java  OnRecordListener.java  OnRecordUpdateListener.java  RecordUtils.java
mp3lame/src/test/java/com/foretree/media/: ExampleUnitTest.java
